--- a/.github/workflows/medium.yml
+++ b/.github/workflows/medium.yml
@@ -1,8 +1,10 @@
 name: Update Medium posts on README
 
 on:
+  workflow_dispatch:
   schedule:
-    - cron: '0 0 * * *'
+    # Runs at 12am UTC
+    - cron: "0 0 * * *"
 
 jobs:
   update-readme:
