--- a/.github/workflows/medium.yml
+++ b/.github/workflows/medium.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/setup-node@v2
       with:
         node-version: '14.x'
-    - run: npm install
+    - run: rm -rf node_modules && npm install
     - name: Update README with latest Medium posts
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
