--- a/.github/workflows/blog-post-workflow.yml
+++ b/.github/workflows/blog-post-workflow.yml
@@ -1,17 +1,17 @@
-name: Latest blog post workflow
-on:
-  workflow_dispatch:
-  schedule:
-    # Runs every hour
-    - cron: '0 * * * *'
+# name: Latest blog post workflow
+# on:
+#   workflow_dispatch:
+#   schedule:
+#     # Runs every hour
+#     - cron: '0 * * * *'
 
-jobs:
-  update-readme-with-blog:
-    name: Update this repo's README with latest blog posts
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: gautamkrishnar/blog-post-workflow@master
-        with:
-          feed_list: "https://dev.to/feed/rajrathod"
-          max_post_count: 3
+# jobs:
+#   update-readme-with-blog:
+#     name: Update this repo's README with latest blog posts
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v2
+#       - uses: gautamkrishnar/blog-post-workflow@master
+#         with:
+#           feed_list: "https://dev.to/feed/rajrathod"
+#           max_post_count: 3
